# multimodal-ecommerce-qa

./: .gitignore  README.md  codex-run.sh  pyproject.toml
reports/: assignment_requirements.md  full_experiment_journal.md  model_official_practice_check.md  official_multilingual_results.md  remaining_pdf_experiments_report.md
scripts/: render_in_domain_result_tables.py  render_sample_style_results.py  run_official_multilingual_benchmark.py  run_out_of_domain_retrieval.py  run_rerank_filters.py  run_siglip2_in_domain_pipeline.py
src/ecom_rag/: __init__.py  data.py  eval.py  gme_retriever.py  in_domain_pipeline.py  model_retrievers.py  rerankers.py  subcategory_eval.py  web_retrieval.py
